# flappy-bird-sfml

./: .gitignore  AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  Definitions.hpp  InputManager.cpp  InputManager.hpp  State.hpp  StateMachine.cpp  StateMachine.hpp  main.cpp
States/Menu_state/: MenuState.cpp  MenuState.hpp
States/Splash_state/: SplashState.cpp  SplashState.hpp
archive/Splash_state/: SplashState.cpp
game_engine/: AssetManager.cpp  Game.cpp
src/: Bird.cpp  Bird.hpp  Definitions.hpp  HUD.cpp  HUD.hpp  Land.cpp  Land.hpp  Pipes.cpp  Pipes.hpp  main.cpp
src/GameEngine/: AssetManager.cpp  AssetManager.hpp  Game.cpp  Game.hpp  InputManager.cpp  InputManager.hpp  State.hpp  StateMachine.cpp  StateMachine.hpp
src/States/: GameOverState.cpp  GameOverState.hpp  GameState.cpp  GameState.hpp  MenuState.cpp  MenuState.hpp
